[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "lakeprof"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "networkx>=3.4.2",
    "pydot>=3.0.4",
    "tabulate>=0.9.0",
]

[project.scripts]
lakeprof = "lakeprof:lakeprof"
